--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/TemaPrincipal" >
+        android:theme="@style/Theme.Lab5" >
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <!-- JULIO, CIERRA LOS OJOS QUE ME VENGO
+                -->
+                <!-- OHH ME VENGO
+                -->
+                <!-- OHH ME VENGO
+                -->
+                <!-- OHH ME VENGO
+                -->
+                <!-- OHH ME VENGO
+                -->
+                <!-- CIERRA LOS OJOS QUE ME VENGO
+                -->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
