--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pe.pucp.tel306.firebox">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,16 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab5">
-        <activity android:name=".RegistroActivity"></activity>
+        <activity android:name=".AgregarFileActivity"></activity>
+        <activity android:name=".ArchivosActivity" />
+        <activity android:name=".RegistroActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <!--  JULIO, CIERRA LOS OJOS QUE ME VENGO -->
-                <!--  OHH ME VENGO -->
-                <!--  OHH ME VENGO -->
-                <!--  OHH ME VENGO -->
-                <!--  OHH ME VENGO -->
-                <!--  CIERRA LOS OJOS QUE ME VENGO -->
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
