--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
 
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
 }
